projekt_do_pracy_na_labach/kubernetes_yamls/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: apka
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: pv-backend
          persistentVolumeClaim:
            claimName: backend-volume-claim
      containers:
        - name: backend
          image: fiszki_backend:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8000
            name: backend-port
          volumeMounts:
            - mountPath: "/usr/app/loggs"
              name: pv-backend

# #minikube start
# #kubectl get namespaces
# #kubectl config set-context --current --namespace=apka
# #eval $(minikube docker-env)
# #docker build -t fiszki_backend:latest fiszki_backend/
# #kubectl apply -f kubernetes_yamls/
