projekt_do_pracy_na_labach/kubernetes_yamls/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend     #-service
  namespace: apka
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      targetPort: backend-port
      port: 8000
      nodePort: 30005
