projekt_do_pracy_na_labach/kubernetes_yamls/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: apka
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      targetPort: db-port
      port: 27017
