projekt_do_pracy_na_labach/kubernetes_yamls/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: apka
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: apka
      ports:
        - protocol: TCP
        - port: 27017
  # egress:
  # - to:
  #     - namespaceSelector:
  #         matchLabels:
  #           name: akpa
  #   ports:
  #     - protocol: TCP
  #     - port: 27017
